analytic dictionary 작업 #3

--- a/analytics/analytics01.ipynb
+++ b/analytics/analytics01.ipynb
@@ -17,8 +17,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exercise Raw Data Count: 2218\n"
+     ]
+    }
+   ],
    "source": [
     "import ssl\n",
     "from urllib.request import Request, urlopen\n",
@@ -57,8 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 2,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loding Exercise Dictionary Pickle[/Users/kickscar/DoWork/PycharmProjects/HELLCHANG-PRACTICES/datasets/exercise-dict.pkl]\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import os\n",
@@ -80,8 +96,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Raw Data Count(Exercise, Date): (1959, 259)\n",
+      "Exercise Transform Data(Tuple) Count: 1959\n"
+     ]
+    }
+   ],
    "source": [
     "import re\n",
     "from datetime import datetime\n",
@@ -146,22 +171,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# 03. Imputation1: Exercise Days?\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Arnold Press[Dumbbell]', 16)\n",
+      "('Assisted Dips[Machine]', 40)\n",
+      "('Assisted Pull-Up[Machine]', 56)\n",
+      "('Back Extension', 36)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Behind The Neck Press[Smith Machine]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Bent Over Row[Barbell]', 7)\n",
+      "('Bent Over Row[Dumbbell]', 15)\n",
+      "('Biceps Curls[Dumbbell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 1)\n",
+      "('Biceps Curls[Machine]', 13)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Cable Triceps Pushdown[Cable]', 9)\n",
+      "('Chest Fly[Pec Deck Machine]', 39)\n",
+      "('Chest Press[Machine]', 2)\n",
+      "('Cross Lunges', 1)\n",
+      "('Dead Bug', 2)\n",
+      "('Deadlift[Barbell]', 84)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
+      "('Dips', 18)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Flat Bench Press[Barbell]', 53)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Flat Bench Press[Dumbbell]', 2)\n",
+      "('Flat Bench Press[Free]', 1)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Flat Chest Press[Barbell]', 1)\n",
+      "('Flat Chest Press[Dumbbell]', 15)\n",
+      "('Flat Chest Press[Machine]', 8)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Goblet Squat[Kettlebell]', 15)\n",
+      "('Hack Squat[Machine]', 6)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "(\"Hanging Leg Raises[Captain'S Chair]\", 8)\n",
+      "('Hiit[Cycle]', 9)\n",
+      "('Hip Abduction', 1)\n",
+      "('Hip Abduction[Machine]', 76)\n",
+      "('Hip Adduction[Machine]', 81)\n",
+      "('Hip Bridge', 15)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Hip Thrust', 5)\n",
+      "('Incline Bench Press[Barbell]', 17)\n",
+      "('Incline Bench Press[Dumbbell]', 15)\n",
+      "('Incline Bench Press[Machine]', 16)\n",
+      "('Incline Bench Press[Smith Machine]', 26)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Incline Chest Fly[Dumbbell]', 1)\n",
+      "('Incline Chest Press[Barbell]', 3)\n",
+      "('Incline Chest Press[Machine]', 19)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Lat Pulldown[Machine]', 98)\n",
+      "('Leg Curl[Machine]', 1)\n",
+      "('Leg Extension[Machine]', 62)\n",
+      "('Long Pull Row[Cable]', 20)\n",
+      "('Long Pull Row[Machine]', 3)\n",
+      "('Low Pulley[Machine]', 3)\n",
+      "('Low Row[Machine]', 5)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Lying Leg Curls[Machine]', 113)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 9)\n",
+      "('Military Press[Smith Machine]', 6)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 2)\n",
+      "('One Arm Dumbbell Row[Dumbbell]', 2)\n",
+      "('One Arm Seated Row[Machine]', 5)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('One Leg Deadlift[Kettlebell]', 37)\n",
+      "('Plank', 95)\n",
+      "('Power Leg Press[Machine]', 53)\n",
+      "('Pull-Up', 12)\n",
+      "('Push Up', 11)\n",
+      "('Reverse Cable Cross-Over[Cable]', 1)\n",
+      "('Reverse Crunch', 4)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 17)\n",
+      "('Running', 36)\n",
+      "('Running[Treadmill]', 2)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Seated Chest Press(One Arm)[Machine]', 1)\n",
+      "('Seated Chest Press[Machine]', 86)\n",
+      "('Seated Leg Press[Machine]', 12)\n",
+      "('Seated Low Row[Cable]', 33)\n",
+      "('Seated One-Leg Press[Machine]', 2)\n",
+      "('Seated Row(One Arm)[Machine]', 4)\n",
+      "('Seated Row[Machine]', 65)\n",
+      "('Shouder Press[Barbell]', 1)\n",
+      "('Shoulder Press[Barbell]', 2)\n",
+      "('Shoulder Press[Dumbbell]', 2)\n",
+      "('Shoulder Press[Machine]', 75)\n",
+      "('Side Lateral Raise[Dumbbell]', 63)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Side-Lying Hip Abduction', 32)\n",
+      "('Split Squat', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
+      "('Split Squat[Smith Machine]', 6)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Straight Arm Pulldown[Cable]', 41)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Tricep Pushdown[Cable]', 1)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Triceps Pushdown[Cable]', 3)\n",
+      "('Trx Lunge', 1)\n",
+      "('Trx Row', 2)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Upright Row[EZ Curl Bar]', 4)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Walking[Treadmill]', 2)\n",
+      "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Wrist Roller', 22)\n"
+     ]
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   ],
    "source": [
     "# 03. Imputation2: Which Exercises?\n",
     "exs = [t[1] for t in restransform]\n",
@@ -180,8 +324,141 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Lying Leg Curls[Machine]', 113)\n",
+      "('Lat Pulldown[Machine]', 98)\n",
+      "('Plank', 95)\n",
+      "('Seated Chest Press[Machine]', 86)\n",
+      "('Deadlift[Barbell]', 84)\n",
+      "('Hip Adduction[Machine]', 81)\n",
+      "('Hip Abduction[Machine]', 76)\n",
+      "('Shoulder Press[Machine]', 75)\n",
+      "('Seated Row[Machine]', 65)\n",
+      "('Side Lateral Raise[Dumbbell]', 63)\n",
+      "('Leg Extension[Machine]', 62)\n",
+      "('Assisted Pull-Up[Machine]', 56)\n",
+      "('Power Leg Press[Machine]', 53)\n",
+      "('Flat Bench Press[Barbell]', 53)\n",
+      "('Straight Arm Pulldown[Cable]', 41)\n",
+      "('Assisted Dips[Machine]', 40)\n",
+      "('Chest Fly[Pec Deck Machine]', 39)\n",
+      "('One Leg Deadlift[Kettlebell]', 37)\n",
+      "('Running', 36)\n",
+      "('Back Extension', 36)\n",
+      "('Wide Pulldown Rear[Machine]', 35)\n",
+      "('Seated Low Row[Cable]', 33)\n",
+      "('Side-Lying Hip Abduction', 32)\n",
+      "('Incline Bench Press[Smith Machine]', 26)\n",
+      "('Wrist Roller', 22)\n",
+      "('Long Pull Row[Cable]', 20)\n",
+      "('Incline Chest Press[Machine]', 19)\n",
+      "('Dips', 18)\n",
+      "('Incline Bench Press[Barbell]', 17)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 17)\n",
+      "('Incline Bench Press[Machine]', 16)\n",
+      "('Arnold Press[Dumbbell]', 16)\n",
+      "('Hip Bridge', 15)\n",
+      "('Goblet Squat[Kettlebell]', 15)\n",
+      "('Flat Chest Press[Dumbbell]', 15)\n",
+      "('Bent Over Row[Dumbbell]', 15)\n",
+      "('Incline Bench Press[Dumbbell]', 15)\n",
+      "('Biceps Curls[Machine]', 13)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Pull-Up', 12)\n",
+      "('Seated Leg Press[Machine]', 12)\n",
+      "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Push Up', 11)\n",
+      "('Decline Bench Press[Barbell]', 10)\n",
+      "('Hiit[Cycle]', 9)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 9)\n",
+      "('Cable Triceps Pushdown[Cable]', 9)\n",
+      "(\"Hanging Leg Raises[Captain'S Chair]\", 8)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
+      "('Flat Chest Press[Machine]', 8)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Bent Over Row[Barbell]', 7)\n",
+      "('Split Squat[Smith Machine]', 6)\n",
+      "('Hack Squat[Machine]', 6)\n",
+      "('Military Press[Smith Machine]', 6)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('One Arm Seated Row[Machine]', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Low Row[Machine]', 5)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Upright Row[EZ Curl Bar]', 4)\n",
+      "('Seated Row(One Arm)[Machine]', 4)\n",
+      "('Reverse Crunch', 4)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Incline Chest Press[Barbell]', 3)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Triceps Pushdown[Cable]', 3)\n",
+      "('Behind The Neck Press[Smith Machine]', 3)\n",
+      "('Low Pulley[Machine]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Long Pull Row[Machine]', 3)\n",
+      "('Walking[Treadmill]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Running[Treadmill]', 2)\n",
+      "('One Arm Dumbbell Row[Dumbbell]', 2)\n",
+      "('Flat Bench Press[Dumbbell]', 2)\n",
+      "('Chest Press[Machine]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Seated One-Leg Press[Machine]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Shoulder Press[Dumbbell]', 2)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Shoulder Press[Barbell]', 2)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Reverse Cable Cross-Over[Cable]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Tricep Pushdown[Cable]', 1)\n",
+      "('Incline Chest Fly[Dumbbell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Seated Chest Press(One Arm)[Machine]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Flat Chest Press[Barbell]', 1)\n",
+      "('Shouder Press[Barbell]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Biceps Curls[Dumbbell]', 1)\n",
+      "('Leg Curl[Machine]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Flat Bench Press[Free]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# 03. Imputation3: and How Often?\n",
     "sorted_by_count = sorted(dataset_exs, key=lambda t: t[1], reverse=True)\n",
