--- a/analytics/analytics01.ipynb
+++ b/analytics/analytics01.ipynb
@@ -177,6 +177,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Exercise Days: 259\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 03. Imputation1: How Exercise Days?\n",
+    "days = list(set([t[0] for t in restransform]))\n",
+    "print(f'Exercise Days: {len(days)}')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "('Arnold Press[Dumbbell]', 16)\n",
       "('Assisted Dips[Machine]', 40)\n",
       "('Assisted Pull-Up[Machine]', 56)\n",
@@ -324,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -342,8 +366,8 @@
       "('Side Lateral Raise[Dumbbell]', 63)\n",
       "('Leg Extension[Machine]', 62)\n",
       "('Assisted Pull-Up[Machine]', 56)\n",
-      "('Power Leg Press[Machine]', 53)\n",
       "('Flat Bench Press[Barbell]', 53)\n",
+      "('Power Leg Press[Machine]', 53)\n",
       "('Straight Arm Pulldown[Cable]', 41)\n",
       "('Assisted Dips[Machine]', 40)\n",
       "('Chest Fly[Pec Deck Machine]', 39)\n",
@@ -358,104 +382,104 @@
       "('Long Pull Row[Cable]', 20)\n",
       "('Incline Chest Press[Machine]', 19)\n",
       "('Dips', 18)\n",
-      "('Incline Bench Press[Barbell]', 17)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 17)\n",
-      "('Incline Bench Press[Machine]', 16)\n",
+      "('Incline Bench Press[Barbell]', 17)\n",
       "('Arnold Press[Dumbbell]', 16)\n",
+      "('Incline Bench Press[Machine]', 16)\n",
+      "('Flat Chest Press[Dumbbell]', 15)\n",
       "('Hip Bridge', 15)\n",
       "('Goblet Squat[Kettlebell]', 15)\n",
-      "('Flat Chest Press[Dumbbell]', 15)\n",
       "('Bent Over Row[Dumbbell]', 15)\n",
       "('Incline Bench Press[Dumbbell]', 15)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Pull-Up', 12)\n",
-      "('Seated Leg Press[Machine]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
+      "('Seated Leg Press[Machine]', 12)\n",
+      "('Pull-Up', 12)\n",
       "('Push Up', 11)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Lying Triceps Extension[EZ Curl Bar]', 9)\n",
       "('Cable Triceps Pushdown[Cable]', 9)\n",
+      "('Lying Triceps Extension[EZ Curl Bar]', 9)\n",
       "(\"Hanging Leg Raises[Captain'S Chair]\", 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Chest Press[Machine]', 8)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
       "('Bent Over Row[Barbell]', 7)\n",
+      "('Military Press[Smith Machine]', 6)\n",
       "('Split Squat[Smith Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Military Press[Smith Machine]', 6)\n",
-      "('Cable Cross-Over[Cable]', 5)\n",
       "('Body-Weight Squat', 5)\n",
-      "('One Arm Seated Row[Machine]', 5)\n",
-      "('Hip Thrust', 5)\n",
       "('Low Row[Machine]', 5)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('One Arm Seated Row[Machine]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Upright Row[EZ Curl Bar]', 4)\n",
       "('Seated Row(One Arm)[Machine]', 4)\n",
+      "('Upright Row[EZ Curl Bar]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Goblet Squat[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
-      "('Incline Chest Press[Barbell]', 3)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Triceps Pushdown[Cable]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "('Long Pull Row[Machine]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Incline Chest Press[Barbell]', 3)\n",
       "('Behind The Neck Press[Smith Machine]', 3)\n",
       "('Low Pulley[Machine]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Long Pull Row[Machine]', 3)\n",
-      "('Walking[Treadmill]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Running[Treadmill]', 2)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Goblet Squat[Dumbbell]', 3)\n",
       "('One Arm Dumbbell Row[Dumbbell]', 2)\n",
-      "('Flat Bench Press[Dumbbell]', 2)\n",
-      "('Chest Press[Machine]', 2)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Seated One-Leg Press[Machine]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Shoulder Press[Dumbbell]', 2)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 2)\n",
-      "('Trx Row', 2)\n",
+      "('Flat Bench Press[Dumbbell]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
+      "('Trx Row', 2)\n",
       "('Shoulder Press[Barbell]', 2)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Reverse Cable Cross-Over[Cable]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Tricep Pushdown[Cable]', 1)\n",
-      "('Incline Chest Fly[Dumbbell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Seated Chest Press(One Arm)[Machine]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Flat Chest Press[Barbell]', 1)\n",
-      "('Shouder Press[Barbell]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Flat Bench Press[Dumbbel]', 1)\n",
-      "('Biceps Curls[Dumbbell]', 1)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Walking[Treadmill]', 2)\n",
+      "('Running[Treadmill]', 2)\n",
+      "('Chest Press[Machine]', 2)\n",
       "('Leg Curl[Machine]', 1)\n",
+      "('Biceps Curls[Dumbbell]', 1)\n",
+      "('Flat Chest Press[Barbell]', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Reverse Cable Cross-Over[Cable]', 1)\n",
+      "('Seated Chest Press(One Arm)[Machine]', 1)\n",
+      "('Tricep Pushdown[Cable]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
       "('Full Squat[Barbell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Biceps Curls[Fixed Barbell]', 1)\n",
-      "('Hip Abduction', 1)\n",
       "('Flat Bench Press[Free]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Shouder Press[Barbell]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
       "('Vipr Overhead Squat', 1)\n",
       "('Trx Suspended Lunge', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Incline Chest Fly[Dumbbell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 1)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n"
+      "('Vipr Lateral Shuffle', 1)\n"
      ]
     }
    ],
