analytic dictionary 작업 #3

--- a/analytics/02.transformation.ipynb
+++ b/analytics/02.transformation.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Workout Analytics -01, 02-\n",
     "#### 01. Aquisition with Crawling\n",
-    "#### 02. Transformation included Cleansing, Denoising and Normalization"
+    "#### 02. Transformation with Cleansing, Denoising and Normalization(using Exercise-Dictionary)"
    ]
   },
   {
