--- a/analytics/analytics01.ipynb
+++ b/analytics/analytics01.ipynb
@@ -5,7 +5,7 @@
    "source": [
     "## Workout Analytics\n",
     "#### 01. Aquisition with Crawling\n",
-    "#### 02. Transformation included Cleansing, Denoising and Normalization\n",
+    "#### 02. Transformation with Cleansing, Denoising and Normalization(using Exercise-Dictionary)\n",
     "#### 03. Imputation"
    ],
    "metadata": {
