--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -5,8 +5,8 @@
    "source": [
     "## Workout Analytics\n",
     "#### 01. Aquisition with Crawling\n",
-    "#### 02. Transformation with Cleansing, Denoising and Normalization(using Exercise-Dictionary)\n",
-    "#### 03. Imputation"
+    "#### 02. Transformation with Cleansing, Denoising, Imputation and Normalization(using Exercise-Dictionary)\n",
+    "#### 03. Exploring Basically"
    ],
    "metadata": {
     "collapsed": false,
@@ -23,7 +23,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Raw Data Count: 2218\n"
+      "Aquisition Raw Data Count: 2218\n"
      ]
     }
    ],
@@ -33,7 +33,6 @@
     "from functools import reduce\n",
     "from itertools import count\n",
     "\n",
-    "# 01. Acquisition with Crawling\n",
     "resfetch = []\n",
     "try:\n",
     "    ssl._create_default_https_context = ssl._create_unverified_context\n",
@@ -54,7 +53,7 @@
     "except Exception as err:\n",
     "    (lambda e: None)(err)\n",
     "\n",
-    "print(f'Exercise Raw Data Count: {len(resfetch)}')"
+    "print(f'Aquisition Raw Data Count: {len(resfetch)}')"
    ],
    "metadata": {
     "collapsed": false,
@@ -71,7 +70,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loding Exercise Dictionary Pickle[/Users/kickscar/DoWork/PycharmProjects/HELLCHANG-PRACTICES/datasets/exercise-dict.pkl]\n"
+      "Loding Exercise Dictionary Pickle[/Users/kickscar/DoWork/PycharmProjects/HELLCHANG-PRACTICES/datasets/pickles/exercise-dict.pkl]\n"
      ]
     }
    ],
@@ -80,8 +79,7 @@
     "import os\n",
     "import pickle\n",
     "\n",
-    "# Load Exercise Dictionary\n",
-    "dictfile = os.path.join(Path(os.getcwd()).parent, 'datasets', 'exercise-dict.pkl')\n",
+    "dictfile = os.path.join(Path(os.getcwd()).parent, 'datasets', 'pickles', 'exercise-dict.pkl')\n",
     "with open(dictfile, 'rb') as file:\n",
     "    exercisedict = pickle.load(file)\n",
     "\n",
@@ -111,7 +109,6 @@
     "import re\n",
     "from datetime import datetime\n",
     "\n",
-    "# 02. Transformation included Cleansing, Denoising and Normalization\n",
     "restransform = []\n",
     "exs_dict = exercisedict['exercises']\n",
     "eqptdials_dict = exercisedict['equipment-dialects']\n",
@@ -121,7 +118,6 @@
     "\n",
     "for res in resfetch:\n",
     "    if res.startswith('####'):\n",
-    "        # 0. counting\n",
     "        exercise_rawdata_count = exercise_rawdata_count + 1\n",
     "\n",
     "        # 1. split exercise name & record\n",
@@ -155,7 +151,6 @@
     "\n",
     "        restransform[len(restransform):] = [(date, exname, *re.split(r'\\s+', exrecord.strip()))]\n",
     "    elif res.startswith('##'):\n",
-    "        # 0. counting\n",
     "        date_rawdata_count = date_rawdata_count + 1\n",
     "        date = datetime.strptime(res.replace('##', '').strip(), '%Y/%m/%d')\n",
     "\n",
@@ -182,7 +177,7 @@
     }
    ],
    "source": [
-    "# 03. Imputation1: How Exercise Days?\n",
+    "# 03. Exploring1: How Exercise Days?\n",
     "days = list(set([t[0] for t in restransform]))\n",
     "print(f'Exercise Days: {len(days)}')"
    ],
@@ -331,7 +326,7 @@
     }
    ],
    "source": [
-    "# 03. Imputation2: Which Exercises?\n",
+    "# 03. Exploring2: Which Exercises?\n",
     "exs = [t[1] for t in restransform]\n",
     "dataset_exs = [(ex, exs.count(ex)) for ex in list(set(exs))]\n",
     "\n",
@@ -372,8 +367,8 @@
       "('Assisted Dips[Machine]', 40)\n",
       "('Chest Fly[Pec Deck Machine]', 39)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
-      "('Running', 36)\n",
       "('Back Extension', 36)\n",
+      "('Running', 36)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Seated Low Row[Cable]', 33)\n",
       "('Side-Lying Hip Abduction', 32)\n",
@@ -382,109 +377,109 @@
       "('Long Pull Row[Cable]', 20)\n",
       "('Incline Chest Press[Machine]', 19)\n",
       "('Dips', 18)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 17)\n",
       "('Incline Bench Press[Barbell]', 17)\n",
-      "('Arnold Press[Dumbbell]', 16)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 17)\n",
       "('Incline Bench Press[Machine]', 16)\n",
-      "('Flat Chest Press[Dumbbell]', 15)\n",
+      "('Arnold Press[Dumbbell]', 16)\n",
       "('Hip Bridge', 15)\n",
-      "('Goblet Squat[Kettlebell]', 15)\n",
       "('Bent Over Row[Dumbbell]', 15)\n",
+      "('Goblet Squat[Kettlebell]', 15)\n",
       "('Incline Bench Press[Dumbbell]', 15)\n",
+      "('Flat Chest Press[Dumbbell]', 15)\n",
       "('Biceps Curls[Machine]', 13)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Seated Leg Press[Machine]', 12)\n",
       "('Pull-Up', 12)\n",
+      "('Seated Leg Press[Machine]', 12)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Push Up', 11)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Cable Triceps Pushdown[Cable]', 9)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 9)\n",
-      "(\"Hanging Leg Raises[Captain'S Chair]\", 8)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Chest Press[Machine]', 8)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
+      "(\"Hanging Leg Raises[Captain'S Chair]\", 8)\n",
       "('Split Squat[Kettlebell]', 7)\n",
       "('Bent Over Row[Barbell]', 7)\n",
-      "('Military Press[Smith Machine]', 6)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Split Squat[Smith Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Body-Weight Squat', 5)\n",
-      "('Low Row[Machine]', 5)\n",
+      "('Military Press[Smith Machine]', 6)\n",
       "('Cable Cross-Over[Cable]', 5)\n",
-      "('Hip Thrust', 5)\n",
-      "('One Arm Seated Row[Machine]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Seated Row(One Arm)[Machine]', 4)\n",
-      "('Upright Row[EZ Curl Bar]', 4)\n",
+      "('Low Row[Machine]', 5)\n",
+      "('One Arm Seated Row[Machine]', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('Body-Weight Squat', 5)\n",
       "('Reverse Crunch', 4)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Triceps Pushdown[Cable]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
+      "('Upright Row[EZ Curl Bar]', 4)\n",
+      "('Seated Row(One Arm)[Machine]', 4)\n",
       "('Long Pull Row[Machine]', 3)\n",
-      "('Sumo Deadlift[Smith Machine]', 3)\n",
+      "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Incline Chest Press[Barbell]', 3)\n",
-      "('Behind The Neck Press[Smith Machine]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Low Pulley[Machine]', 3)\n",
+      "('Behind The Neck Press[Smith Machine]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Triceps Pushdown[Cable]', 3)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Trx Row', 2)\n",
+      "('Seated One-Leg Press[Machine]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Flat Bench Press[Dumbbell]', 2)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Shoulder Press[Dumbbell]', 2)\n",
+      "('Chest Press[Machine]', 2)\n",
       "('One Arm Dumbbell Row[Dumbbell]', 2)\n",
       "('One Arm Bent Over Row[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Seated One-Leg Press[Machine]', 2)\n",
-      "('Shoulder Press[Dumbbell]', 2)\n",
-      "('Flat Bench Press[Dumbbell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Trx Row', 2)\n",
-      "('Shoulder Press[Barbell]', 2)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking[Treadmill]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
       "('Running[Treadmill]', 2)\n",
-      "('Chest Press[Machine]', 2)\n",
-      "('Leg Curl[Machine]', 1)\n",
-      "('Biceps Curls[Dumbbell]', 1)\n",
-      "('Flat Chest Press[Barbell]', 1)\n",
-      "('Flat Bench Press[Dumbbel]', 1)\n",
-      "('Reverse Cable Cross-Over[Cable]', 1)\n",
-      "('Seated Chest Press(One Arm)[Machine]', 1)\n",
-      "('Tricep Pushdown[Cable]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Full Squat[Barbell]', 1)\n",
-      "('Flat Bench Press[Free]', 1)\n",
-      "('Shouder Press[Barbell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
+      "('Shoulder Press[Barbell]', 2)\n",
+      "('Walking[Treadmill]', 2)\n",
       "('Vipr Ice Skater', 1)\n",
-      "('Incline Chest Fly[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
-      "('Trx Lunge', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Biceps Curls[Fixed Barbell]', 1)\n",
+      "('Reverse Cable Cross-Over[Cable]', 1)\n",
+      "('Biceps Curls[Dumbbell]', 1)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n"
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Incline Chest Fly[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Tricep Pushdown[Cable]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Shouder Press[Barbell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Biceps Curls[Fixed Barbell]', 1)\n",
+      "('Flat Bench Press[Free]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Seated Chest Press(One Arm)[Machine]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Leg Curl[Machine]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Flat Chest Press[Barbell]', 1)\n"
      ]
     }
    ],
    "source": [
-    "# 03. Imputation3: and How Often?\n",
+    "# 03. Exploring3: and How Often?\n",
     "sorted_by_count = sorted(dataset_exs, key=lambda t: t[1], reverse=True)\n",
     "for d in sorted_by_count:\n",
     "     print(d)"
