--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -100,7 +100,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercise, Date): (2036, 271)\n",
+      "Raw Data Count(Exercises, Days): (2036, 271)\n",
       "Exercise Transform Data(Tuple) Count: 2036\n"
      ]
     }
@@ -154,7 +154,7 @@
     "        date_rawdata_count = date_rawdata_count + 1\n",
     "        date = datetime.strptime(res.replace('##', '').strip(), '%Y/%m/%d')\n",
     "\n",
-    "print(f'Raw Data Count(Exercise, Date): ({exercise_rawdata_count}, {date_rawdata_count})')\n",
+    "print(f'Raw Data Count(Exercises, Days): ({exercise_rawdata_count}, {date_rawdata_count})')\n",
     "print(f'Exercise Transform Data(Tuple) Count: {len(restransform)}')"
    ],
    "metadata": {
@@ -213,9 +213,7 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 5)\n",
-      "('Cable Triceps Pushdown[Cable]', 10)\n",
       "('Chest Fly[Pec Deck Machine]', 41)\n",
-      "('Chest Press[Machine]', 2)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
       "('Deadlift[Barbell]', 87)\n",
@@ -258,12 +256,11 @@
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
       "('Lat Pulldown[Machine]', 101)\n",
-      "('Leg Curl[Machine]', 1)\n",
       "('Leg Extension[Machine]', 62)\n",
       "('Long Pull Row[Cable]', 54)\n",
       "('Long Pull Row[Machine]', 11)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 115)\n",
+      "('Lying Leg Curls[Machine]', 116)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Military Press[Smith Machine]', 6)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
@@ -282,7 +279,7 @@
       "('Running', 45)\n",
       "('Running[Treadmill]', 2)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Seated Chest Press[Machine]', 87)\n",
+      "('Seated Chest Press[Machine]', 89)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 72)\n",
@@ -303,7 +300,7 @@
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Triceps Pushdown[Cable]', 4)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Trx Lunge', 1)\n",
       "('Trx Row', 2)\n",
       "('Trx Suspended Lunge', 1)\n",
@@ -343,10 +340,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 115)\n",
+      "('Lying Leg Curls[Machine]', 116)\n",
       "('Lat Pulldown[Machine]', 101)\n",
       "('Plank', 100)\n",
-      "('Seated Chest Press[Machine]', 87)\n",
+      "('Seated Chest Press[Machine]', 89)\n",
       "('Deadlift[Barbell]', 87)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Hip Abduction[Machine]', 79)\n",
@@ -370,99 +367,96 @@
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
       "('Incline Bench Press[Barbell]', 20)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 18)\n",
       "('Dips', 18)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 18)\n",
       "('Incline Bench Press[Dumbbell]', 17)\n",
-      "('Bent Over Row[Dumbbell]', 16)\n",
       "(\"Hanging Leg Raises[Captain'S Chair]\", 16)\n",
       "('Arnold Press[Dumbbell]', 16)\n",
+      "('Bent Over Row[Dumbbell]', 16)\n",
+      "('Goblet Squat[Kettlebell]', 15)\n",
       "('Flat Chest Press[Dumbbell]', 15)\n",
       "('Hip Bridge', 15)\n",
-      "('Goblet Squat[Kettlebell]', 15)\n",
+      "('Triceps Pushdown[Cable]', 14)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
       "('Pull-Up', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "('Push-Up', 11)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Long Pull Row[Machine]', 11)\n",
+      "('Push-Up', 11)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
-      "('Cable Triceps Pushdown[Cable]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Flat Chest Press[Machine]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Split Squat[Smith Machine]', 7)\n",
-      "('Bent Over Row[Barbell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Military Press[Smith Machine]', 6)\n",
+      "('Bent Over Row[Barbell]', 7)\n",
+      "('Split Squat[Smith Machine]', 7)\n",
       "('Upright Row[EZ Curl Bar]', 6)\n",
+      "('Military Press[Smith Machine]', 6)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('Cable Cross-Over[Cable]', 5)\n",
-      "('Squat[Dumbbell]', 5)\n",
       "('Body-Weight Squat', 5)\n",
-      "('Hip Thrust', 5)\n",
       "('One Arm Seated Row[Machine]', 5)\n",
-      "('Triceps Pushdown[Cable]', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Squat[Dumbbell]', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Cable Cross-Over[Cable]', 3)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Shoulder Press[Barbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Hanging Leg Raise', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
+      "('Shoulder Press[Barbell]', 3)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
+      "('Reverse Cable Cross-Over[Cable]', 3)\n",
       "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Flat Bench Press[Dumbbell]', 2)\n",
-      "('Running[Treadmill]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Chest Press[Machine]', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Walking[Treadmill]', 2)\n",
       "('Dead Bug', 2)\n",
+      "('Shoulder Press[Dumbbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Flat Bench Press[Dumbbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Running[Treadmill]', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
       "('Trx Row', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Walking[Treadmill]', 2)\n",
-      "('Shoulder Press[Dumbbell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Vipr Overhead Squat', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Hip Abduction', 1)\n",
-      "('Vipr Lateral Shuffle', 1)\n",
-      "('Vipr Ice Skater', 1)\n",
-      "('Flat Bench Press[Dumbbel]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Trx Suspended Lunge', 1)\n",
       "('Split Squat', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Full Squat[Barbell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Flat Chest Press[Barbell]', 1)\n",
       "('Cross Lunges', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Trx Lunge', 1)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Hip Abduction', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Flat Chest Press[Barbell]', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
       "('Flat Bench Press[Free]', 1)\n",
       "('Biceps Curls[Barbell]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Leg Curl[Machine]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
       "('One Leg Daedlift[Kettlebell]', 1)\n",
-      "('Trx Lunge', 1)\n"
+      "('Vipr Overhead Squat', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n"
      ]
     }
    ],
