--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -130,14 +130,23 @@
     "\n",
     "        # 2-1. name\n",
     "        exname = exname.strip().title()\n",
+    "\n",
     "        for exkey in exs_dict:\n",
-    "            exdials = exs_dict[exkey]['dialects']\n",
+    "            exdials = exs_dict[exkey]['dialects'] if 'dialects' in exs_dict[exkey] else []\n",
     "            if exname in exdials:\n",
     "                exname = exkey\n",
     "                break\n",
     "\n",
     "        # 2-2. equipment\n",
-    "        equipment = (equipment if equipment else (exs_dict[exname]['default-equipment'] if exs_dict[exname]['default-equipment'] else '')).strip().title()\n",
+    "        if exname in exs_dict and 'equipment-dialects' in exs_dict[exname] and equipment in exs_dict[exname]['equipment-dialects']:\n",
+    "            equipment = exs_dict[exname]['default-equipment']\n",
+    "\n",
+    "        if equipment is None and exname in exs_dict and 'default-equipment' in exs_dict[exname]:\n",
+    "            equipment = exs_dict[exname]['default-equipment'] if exs_dict[exname]['default-equipment'] else ''\n",
+    "\n",
+    "        if equipment:\n",
+    "            equipment = equipment.strip().title()\n",
+    "\n",
     "        for eqptdials_key in eqptdials_dict:\n",
     "            if equipment in eqptdials_dict[eqptdials_key]:\n",
     "                equipment = eqptdials_key\n",
@@ -199,7 +208,7 @@
       "('Arnold Press[Dumbbell]', 16)\n",
       "('Assisted Dips[Machine]', 43)\n",
       "('Assisted Pull-Up[Machine]', 57)\n",
-      "('Back Extension[Machine]', 36)\n",
+      "('Back Extension', 36)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
@@ -240,7 +249,7 @@
       "('Hip Adduction[Machine]', 81)\n",
       "('Hip Bridge', 15)\n",
       "('Hip External Rotation', 1)\n",
-      "('Hip Thrust[Barbell]', 5)\n",
+      "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 20)\n",
       "('Incline Bench Press[Dumbbell]', 17)\n",
@@ -252,8 +261,7 @@
       "('Jump Squat[Kettlebell]', 1)\n",
       "('Lat Pulldown[Machine]', 101)\n",
       "('Leg Extension[Machine]', 62)\n",
-      "('Long Pull Row[Cable]', 54)\n",
-      "('Long Pull Row[Machine]', 11)\n",
+      "('Long Pull Row[Cable]', 65)\n",
       "('Lunge[Dumbbell]', 1)\n",
       "('Lying Leg Curls[Machine]', 116)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
@@ -271,7 +279,7 @@
       "('Reverse Cable Cross-Over[Cable]', 3)\n",
       "('Reverse Crunch', 4)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 18)\n",
-      "('Running[Treadmill]', 47)\n",
+      "('Running', 47)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
       "('Seated Chest Press[Machine]', 89)\n",
       "('Seated Leg Press[Machine]', 14)\n",
@@ -302,11 +310,11 @@
       "('Vipr Ice Skater[Vipr Tube]', 1)\n",
       "('Vipr Lateral Shuffle[Vipr Tube]', 1)\n",
       "('Vipr Overhead Squat[Vipr Tube]', 1)\n",
+      "('Walking', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Walking[Treadmill]', 2)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
-      "('Wrist Roller[Wrist Roller]', 22)\n"
+      "('Wrist Roller', 22)\n"
      ]
     }
    ],
@@ -344,28 +352,28 @@
       "('Shoulder Press[Machine]', 77)\n",
       "('Seated Row[Machine]', 72)\n",
       "('Side Lateral Raise[Dumbbell]', 65)\n",
+      "('Long Pull Row[Cable]', 65)\n",
       "('Leg Extension[Machine]', 62)\n",
       "('Flat Bench Press[Barbell]', 58)\n",
       "('Assisted Pull-Up[Machine]', 57)\n",
       "('Power Leg Press[Machine]', 56)\n",
-      "('Long Pull Row[Cable]', 54)\n",
-      "('Running[Treadmill]', 47)\n",
+      "('Running', 47)\n",
       "('Straight Arm Pulldown[Cable]', 44)\n",
       "('Assisted Dips[Machine]', 43)\n",
       "('Chest Fly[Pec Deck Machine]', 41)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
-      "('Back Extension[Machine]', 36)\n",
+      "('Back Extension', 36)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Incline Bench Press[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
-      "('Wrist Roller[Wrist Roller]', 22)\n",
+      "('Wrist Roller', 22)\n",
       "('Incline Bench Press[Barbell]', 20)\n",
       "(\"Hanging Leg Raise[Captain'S Chair]\", 19)\n",
-      "('Dips', 18)\n",
       "('Reverse Pec Deck Fly[Pec Deck Machine]', 18)\n",
-      "('Incline Bench Press[Dumbbell]', 17)\n",
+      "('Dips', 18)\n",
       "('Flat Bench Press[Dumbbell]', 17)\n",
+      "('Incline Bench Press[Dumbbell]', 17)\n",
       "('Arnold Press[Dumbbell]', 16)\n",
       "('Bent Over Row[Dumbbell]', 16)\n",
       "('Hip Bridge', 15)\n",
@@ -373,78 +381,77 @@
       "('Seated Leg Press[Machine]', 14)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Pull-Up', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
+      "('Pull-Up', 12)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Push-Up', 11)\n",
-      "('Long Pull Row[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
-      "('Deadlift[Dumbbell]', 8)\n",
       "('Flat Bench Press[Machine]', 8)\n",
-      "('Split Squat[Smith Machine]', 7)\n",
-      "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Split Squat[Kettlebell]', 7)\n",
+      "('Deadlift[Dumbbell]', 8)\n",
       "('Bent Over Row[Barbell]', 7)\n",
-      "('Hack Squat[Machine]', 6)\n",
+      "('Split Squat[Smith Machine]', 7)\n",
+      "('Split Squat[Kettlebell]', 7)\n",
+      "('Flat Bench Press[Smith Machine]', 7)\n",
       "('Military Press[Smith Machine]', 6)\n",
       "('Upright Row[EZ Curl Bar]', 6)\n",
-      "('Body-Weight Squat', 5)\n",
+      "('Hack Squat[Machine]', 6)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
       "('One Arm Seated Row[Machine]', 5)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Hip Thrust[Barbell]', 5)\n",
-      "('Cable Cross-Over[Cable]', 5)\n",
+      "('Body-Weight Squat', 5)\n",
+      "('Hip Thrust', 5)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Reverse Cable Cross-Over[Cable]', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Reverse Cable Cross-Over[Cable]', 3)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
       "('Shoulder Press[Barbell]', 3)\n",
-      "('Trx Row[Trx Suspension Anchor]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Walking[Treadmill]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Shoulder Press[Dumbbell]', 2)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Wide Squat[Kettlebell]', 2)\n",
-      "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Trx Row[Trx Suspension Anchor]', 2)\n",
+      "('Shoulder Press[Dumbbell]', 2)\n",
+      "('Dead Bug', 2)\n",
       "('Full Squat[Smith Machine]', 2)\n",
-      "('Cross Lunges', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Full Squat[Barbell]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Lunge[Dumbbell]', 1)\n",
-      "('Hip External Rotation', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Trx Suspended Lunge[Trx Suspension Anchor]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Walking', 2)\n",
+      "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Trx Lunge[Trx Suspension Anchor]', 1)\n",
-      "('Vipr Lateral Shuffle[Vipr Tube]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Cross Lunges', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Trx Suspended Lunge[Trx Suspension Anchor]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Face Pulls[Cable]', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('One Leg Daedlift[Kettlebell]', 1)\n",
-      "('Vipr Overhead Squat[Vipr Tube]', 1)\n",
-      "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Vipr Ice Skater[Vipr Tube]', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
       "('Squat[Kettlebell]', 1)\n",
+      "('Vipr Ice Skater[Vipr Tube]', 1)\n",
+      "('One Leg Daedlift[Kettlebell]', 1)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n"
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Lunge[Dumbbell]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n",
+      "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Sumo Squat[Kettlebell]', 1)\n",
+      "('Vipr Overhead Squat[Vipr Tube]', 1)\n",
+      "('Vipr Lateral Shuffle[Vipr Tube]', 1)\n",
+      "('Hip External Rotation', 1)\n"
      ]
     }
    ],
