--- a/analytics/exploring01.ipynb
+++ b/analytics/exploring01.ipynb
@@ -18,25 +18,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aquisition Raw Data Count: 2307\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import ssl\n",
     "from urllib.request import Request, urlopen\n",
     "from functools import reduce\n",
     "from itertools import count\n",
     "\n",
-    "resfetch = []\n",
     "try:\n",
     "    ssl._create_default_https_context = ssl._create_unverified_context\n",
     "\n",
+    "    resfetch = []\n",
     "    for idx in count(start=1):\n",
     "        l = len(resfetch)\n",
     "        resfetch[l:] = list(filter(\n",
@@ -50,10 +42,10 @@
     "\n",
     "        if len(resfetch) == l:\n",
     "            break\n",
-    "except Exception as err:\n",
-    "    (lambda e: None)(err)\n",
     "\n",
-    "print(f'Aquisition Raw Data Count: {len(resfetch)}')"
+    "    print(f'Aquisition Raw Data Count: {len(resfetch)}')\n",
+    "except Exception as err:\n",
+    "    (lambda e: None)(err)"
    ],
    "metadata": {
     "collapsed": false,
@@ -100,8 +92,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw Data Count(Exercises, Days): (2036, 271)\n",
-      "Exercise Transform Data(Tuple) Count: 2036\n"
+      "Raw Data Count(Exercises, Days): (2069, 276)\n",
+      "Exercise Transform Data(Tuple) Count: 2069\n"
      ]
     }
    ],
@@ -138,11 +130,10 @@
     "                break\n",
     "\n",
     "        # 2-2. equipment\n",
-    "        if exname in exs_dict and 'equipment-dialects' in exs_dict[exname] and equipment in exs_dict[exname]['equipment-dialects']:\n",
-    "            equipment = exs_dict[exname]['default-equipment']\n",
-    "\n",
-    "        if equipment is None and exname in exs_dict and 'default-equipment' in exs_dict[exname]:\n",
-    "            equipment = exs_dict[exname]['default-equipment'] if exs_dict[exname]['default-equipment'] else ''\n",
+    "        if exname in exs_dict and 'default-equipment' in exs_dict[exname]:\n",
+    "            if equipment or \\\n",
+    "                    ('equipment-dialects' in exs_dict[exname] and equipment in exs_dict[exname]['equipment-dialects']):\n",
+    "                equipment = exs_dict[exname]['default-equipment']\n",
     "\n",
     "        if equipment:\n",
     "            equipment = equipment.strip().title()\n",
@@ -181,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exercise Days: 271\n"
+      "Exercise Days: 276\n"
      ]
     }
    ],
@@ -205,15 +196,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Arnold Press[Dumbbell]', 16)\n",
-      "('Assisted Dips[Machine]', 43)\n",
-      "('Assisted Pull-Up[Machine]', 57)\n",
-      "('Back Extension', 36)\n",
+      "('Arnold Press[Dumbbell]', 17)\n",
+      "('Assisted Dips[Machine]', 44)\n",
+      "('Assisted Pull-Up[Machine]', 59)\n",
+      "('Back Extension', 37)\n",
       "('Barbell Lunge[Smith Machine]', 1)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
       "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Row[Barbell]', 7)\n",
-      "('Bent Over Row[Dumbbell]', 16)\n",
+      "('Bent Over Row[Barbell]', 8)\n",
+      "('Bent Over Row[Dumbbell]', 17)\n",
       "('Biceps Curls[Barbell]', 1)\n",
       "('Biceps Curls[Dumbbell]', 2)\n",
       "('Biceps Curls[EZ Curl Bar]', 1)\n",
@@ -222,16 +213,16 @@
       "('Body-Weight Squat', 5)\n",
       "('Cable Chest Fly[Cable]', 1)\n",
       "('Cable Cross-Over[Cable]', 5)\n",
-      "('Chest Fly[Pec Deck Machine]', 41)\n",
+      "('Chest Fly[Pec Deck Machine]', 42)\n",
       "('Cross Lunges', 1)\n",
       "('Dead Bug', 2)\n",
-      "('Deadlift[Barbell]', 87)\n",
+      "('Deadlift[Barbell]', 88)\n",
       "('Deadlift[Dumbbell]', 8)\n",
       "('Deadlift[Kettlebell]', 12)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Dips', 18)\n",
       "('Face Pulls[Cable]', 1)\n",
-      "('Flat Bench Press[Barbell]', 58)\n",
+      "('Flat Bench Press[Barbell]', 59)\n",
       "('Flat Bench Press[Dumbbel]', 1)\n",
       "('Flat Bench Press[Dumbbell]', 17)\n",
       "('Flat Bench Press[Machine]', 8)\n",
@@ -243,8 +234,10 @@
       "('Goblet Squat[Kettlebell]', 15)\n",
       "('Hack Squat[Machine]', 6)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 19)\n",
+      "('Hanging Leg Raise', 3)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Hiit[Cycle]', 9)\n",
+      "('Hip Abduction', 1)\n",
       "('Hip Abduction[Machine]', 80)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Hip Bridge', 15)\n",
@@ -252,64 +245,62 @@
       "('Hip Thrust', 5)\n",
       "('Incline Bench Cable Fly[Cable]', 1)\n",
       "('Incline Bench Press[Barbell]', 20)\n",
-      "('Incline Bench Press[Dumbbell]', 17)\n",
+      "('Incline Bench Press[Dumbbell]', 18)\n",
       "('Incline Bench Press[Machine]', 35)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Incline Bench Row[Dumbbell]', 1)\n",
       "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Incline Dumbbel Row[Dumbbell]', 1)\n",
       "('Jump Squat[Kettlebell]', 1)\n",
-      "('Lat Pulldown[Machine]', 101)\n",
+      "('Lat Pulldown[Machine]', 102)\n",
       "('Leg Extension[Machine]', 62)\n",
-      "('Long Pull Row[Cable]', 65)\n",
+      "('Long Pull Row[Cable]', 67)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Lying Leg Curls[Machine]', 116)\n",
+      "('Lying Leg Curls[Machine]', 117)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
-      "('Military Press[Smith Machine]', 6)\n",
+      "('Military Press[Smith Machine]', 7)\n",
       "('One Arm Bent Over Row[Dumbbell]', 4)\n",
-      "('One Arm Seated Row[Machine]', 5)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('One Arm Shoulder Press[Dumbbell]', 3)\n",
       "('One Leg Daedlift[Kettlebell]', 1)\n",
       "('One Leg Deadlift[Dumbbell]', 1)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
-      "('Plank', 100)\n",
-      "('Power Leg Press[Machine]', 56)\n",
+      "('Plank', 102)\n",
+      "('Power Leg Press[Machine]', 57)\n",
       "('Pull-Up', 12)\n",
       "('Push-Up', 11)\n",
-      "('Reverse Cable Cross-Over[Cable]', 3)\n",
+      "('Reverse Cable Cross-Over[Cable]', 4)\n",
       "('Reverse Crunch', 4)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 18)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 19)\n",
       "('Running', 47)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Seated Chest Press[Machine]', 89)\n",
+      "('Seated Chest Press[Machine]', 90)\n",
       "('Seated Leg Press[Machine]', 14)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
       "('Seated Row[Machine]', 72)\n",
-      "('Shoulder Press[Barbell]', 3)\n",
-      "('Shoulder Press[Dumbbell]', 2)\n",
-      "('Shoulder Press[Machine]', 77)\n",
-      "('Side Lateral Raise[Dumbbell]', 65)\n",
+      "('Shoulder Press[Machine]', 82)\n",
+      "('Side Lateral Raise[Dumbbell]', 66)\n",
       "('Side Lateral Raise[Machine]', 11)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Split Squat', 1)\n",
       "('Split Squat[Dumbbell]', 1)\n",
       "('Split Squat[Kettlebell]', 7)\n",
-      "('Split Squat[Smith Machine]', 7)\n",
+      "('Split Squat[Smith Machine]', 8)\n",
       "('Squat[Dumbbell]', 5)\n",
       "('Squat[Kettlebell]', 1)\n",
-      "('Straight Arm Pulldown[Cable]', 44)\n",
+      "('Straight Arm Pulldown[Cable]', 46)\n",
       "('Sumo Deadlift[Kettlebell]', 1)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
-      "('Trx Lunge[Trx Suspension Anchor]', 1)\n",
-      "('Trx Row[Trx Suspension Anchor]', 2)\n",
-      "('Trx Suspended Lunge[Trx Suspension Anchor]', 1)\n",
-      "('Upright Row[EZ Curl Bar]', 6)\n",
-      "('Vipr Ice Skater[Vipr Tube]', 1)\n",
-      "('Vipr Lateral Shuffle[Vipr Tube]', 1)\n",
-      "('Vipr Overhead Squat[Vipr Tube]', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('Trx Row', 2)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Upright Row[EZ Curl Bar]', 7)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
       "('Walking', 2)\n",
       "('Walking Lunge[Fixed Barbell]', 2)\n",
       "('Wide Pulldown Rear[Machine]', 35)\n",
@@ -342,116 +333,116 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('Lying Leg Curls[Machine]', 116)\n",
-      "('Lat Pulldown[Machine]', 101)\n",
-      "('Plank', 100)\n",
-      "('Seated Chest Press[Machine]', 89)\n",
-      "('Deadlift[Barbell]', 87)\n",
+      "('Lying Leg Curls[Machine]', 117)\n",
+      "('Plank', 102)\n",
+      "('Lat Pulldown[Machine]', 102)\n",
+      "('Seated Chest Press[Machine]', 90)\n",
+      "('Deadlift[Barbell]', 88)\n",
+      "('Shoulder Press[Machine]', 82)\n",
       "('Hip Adduction[Machine]', 81)\n",
       "('Hip Abduction[Machine]', 80)\n",
-      "('Shoulder Press[Machine]', 77)\n",
       "('Seated Row[Machine]', 72)\n",
-      "('Side Lateral Raise[Dumbbell]', 65)\n",
-      "('Long Pull Row[Cable]', 65)\n",
+      "('Long Pull Row[Cable]', 67)\n",
+      "('Side Lateral Raise[Dumbbell]', 66)\n",
       "('Leg Extension[Machine]', 62)\n",
-      "('Flat Bench Press[Barbell]', 58)\n",
-      "('Assisted Pull-Up[Machine]', 57)\n",
-      "('Power Leg Press[Machine]', 56)\n",
+      "('Flat Bench Press[Barbell]', 59)\n",
+      "('Assisted Pull-Up[Machine]', 59)\n",
+      "('Power Leg Press[Machine]', 57)\n",
       "('Running', 47)\n",
-      "('Straight Arm Pulldown[Cable]', 44)\n",
-      "('Assisted Dips[Machine]', 43)\n",
-      "('Chest Fly[Pec Deck Machine]', 41)\n",
+      "('Straight Arm Pulldown[Cable]', 46)\n",
+      "('Assisted Dips[Machine]', 44)\n",
+      "('Chest Fly[Pec Deck Machine]', 42)\n",
+      "('Back Extension', 37)\n",
       "('One Leg Deadlift[Kettlebell]', 37)\n",
-      "('Back Extension', 36)\n",
-      "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Incline Bench Press[Machine]', 35)\n",
+      "('Wide Pulldown Rear[Machine]', 35)\n",
       "('Side-Lying Hip Abduction', 32)\n",
       "('Incline Bench Press[Smith Machine]', 26)\n",
       "('Wrist Roller', 22)\n",
+      "(\"Hanging Leg Raise[Captain'S Chair]\", 20)\n",
       "('Incline Bench Press[Barbell]', 20)\n",
-      "(\"Hanging Leg Raise[Captain'S Chair]\", 19)\n",
-      "('Reverse Pec Deck Fly[Pec Deck Machine]', 18)\n",
+      "('Reverse Pec Deck Fly[Pec Deck Machine]', 19)\n",
       "('Dips', 18)\n",
+      "('Incline Bench Press[Dumbbell]', 18)\n",
+      "('Arnold Press[Dumbbell]', 17)\n",
       "('Flat Bench Press[Dumbbell]', 17)\n",
-      "('Incline Bench Press[Dumbbell]', 17)\n",
-      "('Arnold Press[Dumbbell]', 16)\n",
-      "('Bent Over Row[Dumbbell]', 16)\n",
-      "('Hip Bridge', 15)\n",
+      "('Bent Over Row[Dumbbell]', 17)\n",
       "('Goblet Squat[Kettlebell]', 15)\n",
-      "('Seated Leg Press[Machine]', 14)\n",
+      "('Hip Bridge', 15)\n",
       "('Triceps Pushdown[Cable]', 14)\n",
+      "('Seated Leg Press[Machine]', 14)\n",
       "('Biceps Curls[Machine]', 13)\n",
+      "('Deadlift[Kettlebell]', 12)\n",
       "('Hammer Curls[Dumbbell]', 12)\n",
       "('Pull-Up', 12)\n",
-      "('Deadlift[Kettlebell]', 12)\n",
-      "('Side Lateral Raise[Machine]', 11)\n",
       "('Push-Up', 11)\n",
+      "('Side Lateral Raise[Machine]', 11)\n",
       "('Decline Bench Press[Barbell]', 10)\n",
       "('Lying Triceps Extension[EZ Curl Bar]', 10)\n",
       "('Hiit[Cycle]', 9)\n",
       "('Flat Bench Press[Machine]', 8)\n",
+      "('Split Squat[Smith Machine]', 8)\n",
       "('Deadlift[Dumbbell]', 8)\n",
-      "('Bent Over Row[Barbell]', 7)\n",
-      "('Split Squat[Smith Machine]', 7)\n",
+      "('Bent Over Row[Barbell]', 8)\n",
       "('Split Squat[Kettlebell]', 7)\n",
       "('Flat Bench Press[Smith Machine]', 7)\n",
-      "('Military Press[Smith Machine]', 6)\n",
-      "('Upright Row[EZ Curl Bar]', 6)\n",
+      "('Military Press[Smith Machine]', 7)\n",
+      "('Upright Row[EZ Curl Bar]', 7)\n",
       "('Hack Squat[Machine]', 6)\n",
-      "('Cable Cross-Over[Cable]', 5)\n",
-      "('One Arm Seated Row[Machine]', 5)\n",
+      "('One Arm Seated Row[Machine]', 6)\n",
       "('Squat[Dumbbell]', 5)\n",
-      "('Body-Weight Squat', 5)\n",
+      "('Cable Cross-Over[Cable]', 5)\n",
       "('Hip Thrust', 5)\n",
-      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('Body-Weight Squat', 5)\n",
       "('Behind The Neck Press[Smith Machine]', 4)\n",
+      "('Reverse Cable Cross-Over[Cable]', 4)\n",
       "('Reverse Crunch', 4)\n",
+      "('One Arm Bent Over Row[Dumbbell]', 4)\n",
+      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
+      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
+      "('Front Lateral Raise[Dumbbell]', 3)\n",
+      "('Incline Chest Fly[Dumbbell]', 3)\n",
       "('Sumo Deadlift[Smith Machine]', 3)\n",
       "('Goblet Squat[Dumbbell]', 3)\n",
       "('Seated Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Bent Over Lateral Raise[Dumbbell]', 3)\n",
-      "('Reverse Cable Cross-Over[Cable]', 3)\n",
-      "('One Arm Shoulder Press[Dumbbell]', 3)\n",
-      "('Front Lateral Raise[Dumbbell]', 3)\n",
-      "('Shoulder Press[Barbell]', 3)\n",
-      "('Incline Chest Fly[Dumbbell]', 3)\n",
-      "('Wide Squat[Kettlebell]', 2)\n",
-      "('Biceps Curls[Dumbbell]', 2)\n",
-      "('Trx Row[Trx Suspension Anchor]', 2)\n",
-      "('Shoulder Press[Dumbbell]', 2)\n",
-      "('Dead Bug', 2)\n",
-      "('Full Squat[Smith Machine]', 2)\n",
-      "('Walking Lunge[Fixed Barbell]', 2)\n",
-      "('Biceps Curls[Fixed Barbell]', 2)\n",
-      "('Walking', 2)\n",
+      "('Hanging Leg Raise', 3)\n",
       "('Triceps Kickback[Dumbbell]', 2)\n",
-      "('Trx Lunge[Trx Suspension Anchor]', 1)\n",
-      "('Cross Lunges', 1)\n",
-      "('Biceps Curls[Barbell]', 1)\n",
-      "('One Leg Deadlift[Dumbbell]', 1)\n",
-      "('Split Squat', 1)\n",
-      "('Trx Suspended Lunge[Trx Suspension Anchor]', 1)\n",
-      "('Cable Chest Fly[Cable]', 1)\n",
-      "('Incline Bench Row[Dumbbell]', 1)\n",
-      "('Face Pulls[Cable]', 1)\n",
-      "('Split Squat[Dumbbell]', 1)\n",
-      "('Sumo Deadlift[Kettlebell]', 1)\n",
-      "('Flat Bench Press[Dumbbel]', 1)\n",
-      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
-      "('Biceps Curls[EZ Curl Bar]', 1)\n",
-      "('Squat[Kettlebell]', 1)\n",
-      "('Vipr Ice Skater[Vipr Tube]', 1)\n",
+      "('Walking Lunge[Fixed Barbell]', 2)\n",
+      "('Wide Squat[Kettlebell]', 2)\n",
+      "('Biceps Curls[Fixed Barbell]', 2)\n",
+      "('Full Squat[Smith Machine]', 2)\n",
+      "('Dead Bug', 2)\n",
+      "('Walking', 2)\n",
+      "('Trx Row', 2)\n",
+      "('Biceps Curls[Dumbbell]', 2)\n",
+      "('Vipr Lateral Shuffle', 1)\n",
+      "('Hip Abduction', 1)\n",
       "('One Leg Daedlift[Kettlebell]', 1)\n",
-      "('Barbell Lunge[Smith Machine]', 1)\n",
-      "('Jump Squat[Kettlebell]', 1)\n",
-      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Split Squat', 1)\n",
+      "('Hip External Rotation', 1)\n",
+      "('Incline Bench Row[Dumbbell]', 1)\n",
+      "('Incline Dumbbel Row[Dumbbell]', 1)\n",
+      "('Squat[Kettlebell]', 1)\n",
+      "('Cross Lunges', 1)\n",
       "('Lunge[Dumbbell]', 1)\n",
-      "('Full Squat[Barbell]', 1)\n",
       "('Seated Reverse Fly[Dumbbell]', 1)\n",
+      "('Trx Suspended Lunge', 1)\n",
+      "('Trx Lunge', 1)\n",
+      "('One Leg Deadlift[Dumbbell]', 1)\n",
+      "('Vipr Overhead Squat', 1)\n",
+      "('Vipr Ice Skater', 1)\n",
+      "('Flat Bench Press[Dumbbel]', 1)\n",
       "('Sumo Squat[Kettlebell]', 1)\n",
-      "('Vipr Overhead Squat[Vipr Tube]', 1)\n",
-      "('Vipr Lateral Shuffle[Vipr Tube]', 1)\n",
-      "('Hip External Rotation', 1)\n"
+      "('Face Pulls[Cable]', 1)\n",
+      "('Biceps Curls[Barbell]', 1)\n",
+      "('Jump Squat[Kettlebell]', 1)\n",
+      "('Split Squat[Dumbbell]', 1)\n",
+      "('Incline Bench Cable Fly[Cable]', 1)\n",
+      "('Cable Chest Fly[Cable]', 1)\n",
+      "('Biceps Curls[EZ Curl Bar]', 1)\n",
+      "('Sumo Deadlift[Kettlebell]', 1)\n",
+      "('Barbell Lunge[Smith Machine]', 1)\n",
+      "('Full Squat[Barbell]', 1)\n"
      ]
     }
    ],
